Bug 421589 - Help button doesn't bring up the Klipper help page in Help Center
Summary: Help button doesn't bring up the Klipper help page in Help Center
Status: RESOLVED FIXED
Alias: None
Product: klipper
Classification: Unmaintained
Component: plasma-widget (other bugs)
Version First Reported In: 5.18.5
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-15 23:10 UTC by Michael
Modified: 2020-09-13 23:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael 2020-05-15 23:10:49 UTC
SUMMARY

Click Help is unhelpful.

STEPS TO REPRODUCE
1. Right-click on the clipboard icon in tray, select Configure Clipboard...
2. Click on the Help button in the lower-left corner of the Klipper window

OBSERVED RESULT

KHelpCenter appears, but it confusingly displays "Documentation not Found". However, since I happen to know that this clipboard thing is called "klipper", if I type that into the search field, I get some results and can fish around for what I want.

EXPECTED RESULT

Clicking on the Help button should take me to the "help:/klipper/index.html" page in KHelpCenter.


SOFTWARE/OS VERSIONS

Operating System: KDE neon 5.18
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Kernel Version: 5.3.0-51-generic
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-2467M CPU @ 1.60GHz
Memory: 7.7 GiB of RAM

ADDITIONAL INFORMATION

This same issue has occurred in the past and has been fixed before. Is there some way to create a unit test so that this kind of issue doesn't happen again?

https://bugs.kde.org/show_bug.cgi?id=249730
Comment 1 Bug Janitor Service 2020-09-09 07:41:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/252
Comment 2 Yuri Chornoivan 2020-09-09 10:50:07 UTC
Git commit 365eeb440d16e62d5ed3146b018d7ea4af16a526 by Yuri Chornoivan.
Committed on 09/09/2020 at 07:38.
Pushed by davidedmundson into branch 'master'.

Use Klipper help for the Klipper config dialog

M  +2    -0    klipper/klipper.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/365eeb440d16e62d5ed3146b018d7ea4af16a526
Comment 3 Michael 2020-09-13 23:01:02 UTC
Great, thank you :)