Use Klipper help for the Klipper config dialog

BUG: 421589